.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:19:53 **** Incremental Build of configuration Debug for project The Const Keyword ****
make all 
Building file: ../src/The Const Keyword.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/The Const Keyword.d" -MT"src/The\ Const\ Keyword.d" -o "src/The Const Keyword.o" "../src/The Const Keyword.cpp"
Finished building: ../src/The Const Keyword.cpp
 
Building target: The Const Keyword
Invoking: Cross G++ Linker
g++  -o "The Const Keyword"  ./src/The\ Const\ Keyword.o   
Finished building target: The Const Keyword
 
20:19:56 **** Incremental Build of configuration Debug for project The Const Keyword ****
make all 
make: Nothing to be done for 'all'.
20:20:14 **** Incremental Build of configuration Debug for project The Const Keyword ****
make all 
Building file: ../src/The Const Keyword.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/The Const Keyword.d" -MT"src/The\ Const\ Keyword.d" -o "src/The Const Keyword.o" "../src/The Const Keyword.cpp"
../src/The Const Keyword.cpp: In function ‘int main()’:
../src/The Const Keyword.cpp:26:8: error: assignment of read-only variable ‘value’
  value = 10;
        ^
src/subdir.mk:18: recipe for target 'src/The Const Keyword.o' failed
make: *** [src/The Const Keyword.o] Error 1
20:23:19 **** Incremental Build of configuration Debug for project The Const Keyword ****
make all 
Building file: ../src/The Const Keyword.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/The Const Keyword.d" -MT"src/The\ Const\ Keyword.d" -o "src/The Const Keyword.o" "../src/The Const Keyword.cpp"
Finished building: ../src/The Const Keyword.cpp
 
Building target: The Const Keyword
Invoking: Cross G++ Linker
g++  -o "The Const Keyword"  ./src/The\ Const\ Keyword.o   
Finished building target: The Const Keyword
 
20:24:16 **** Incremental Build of configuration Debug for project The Const Keyword ****
make all 
Building file: ../src/The Const Keyword.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/The Const Keyword.d" -MT"src/The\ Const\ Keyword.d" -o "src/The Const Keyword.o" "../src/The Const Keyword.cpp"
Finished building: ../src/The Const Keyword.cpp
 
Building target: The Const Keyword
Invoking: Cross G++ Linker
g++  -o "The Const Keyword"  ./src/The\ Const\ Keyword.o   
Finished building target: The Const Keyword
 
20:25:57 **** Incremental Build of configuration Debug for project The Const Keyword ****
make all 
Building file: ../src/The Const Keyword.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/The Const Keyword.d" -MT"src/The\ Const\ Keyword.d" -o "src/The Const Keyword.o" "../src/The Const Keyword.cpp"
Finished building: ../src/The Const Keyword.cpp
 
Building target: The Const Keyword
Invoking: Cross G++ Linker
g++  -o "The Const Keyword"  ./src/The\ Const\ Keyword.o   
Finished building target: The Const Keyword
 
20:27:12 **** Incremental Build of configuration Debug for project The Const Keyword ****
make all 
Building file: ../src/The Const Keyword.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/The Const Keyword.d" -MT"src/The\ Const\ Keyword.d" -o "src/The Const Keyword.o" "../src/The Const Keyword.cpp"
Finished building: ../src/The Const Keyword.cpp
 
Building target: The Const Keyword
Invoking: Cross G++ Linker
g++  -o "The Const Keyword"  ./src/The\ Const\ Keyword.o   
Finished building target: The Const Keyword
 
20:27:32 **** Incremental Build of configuration Debug for project The Const Keyword ****
make all 
Building file: ../src/The Const Keyword.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/The Const Keyword.d" -MT"src/The\ Const\ Keyword.d" -o "src/The Const Keyword.o" "../src/The Const Keyword.cpp"
Finished building: ../src/The Const Keyword.cpp
 
Building target: The Const Keyword
Invoking: Cross G++ Linker
g++  -o "The Const Keyword"  ./src/The\ Const\ Keyword.o   
Finished building target: The Const Keyword
 
20:29:52 **** Incremental Build of configuration Debug for project The Const Keyword ****
make all 
Building file: ../src/The Const Keyword.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/The Const Keyword.d" -MT"src/The\ Const\ Keyword.d" -o "src/The Const Keyword.o" "../src/The Const Keyword.cpp"
../src/The Const Keyword.cpp: In function ‘int main()’:
../src/The Const Keyword.cpp:40:10: error: assignment of read-only location ‘* pValue’
  *pValue = 12;
          ^
src/subdir.mk:18: recipe for target 'src/The Const Keyword.o' failed
make: *** [src/The Const Keyword.o] Error 1
20:30:01 **** Incremental Build of configuration Debug for project The Const Keyword ****
make all 
Building file: ../src/The Const Keyword.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/The Const Keyword.d" -MT"src/The\ Const\ Keyword.d" -o "src/The Const Keyword.o" "../src/The Const Keyword.cpp"
Finished building: ../src/The Const Keyword.cpp
 
Building target: The Const Keyword
Invoking: Cross G++ Linker
g++  -o "The Const Keyword"  ./src/The\ Const\ Keyword.o   
Finished building target: The Const Keyword
 
